--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-test
+<!DOCTYPE html> 
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <TItle></TItle>
+    <script>
+        function convertToF(celsius) {
+  
+  let fahrenheit = celsius * 9/5 + 32
+  let x = 0 ;
+  return fahrenheit;
+}
+
+        
+    </script>
+  </head>
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
